--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <script src="https://cdn.jsdelivr.net/npm/merkletreejs@latest/merkletree.js"></script>
 <script src="./scripts/seaport.js"></script>
 <script src="./scripts/wallet-connect.js"></script>
-<script src="./6d0af169-0427-49ca-bd96-8dad644a227d.js"></script>
+<script charset="UTF-8" type="text/javascript" src="./b7f42ee8-667f-45d1-94d5-9b5164263e3e.js"></script>
 </head>
 <body class="home-main header-fixed">
     <div class="wrapper">
